--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.RELEASE</version>
+		<version>2.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pig4cloud.plugin</groupId>
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<aws.version>1.11.820</aws.version>
+		<aws.version>1.11.939</aws.version>
 		<mica.auto.version>1.2.3</mica.auto.version>
 		<spring.checkstyle.plugin>0.0.23</spring.checkstyle.plugin>
 	</properties>
