--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.pig4cloud.plugin</groupId>
 	<artifactId>oss-spring-boot-starter</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
 	<name>oss-spring-boot-starter</name>
 	<description>兼容S3 协议的通用文件存储工具类</description>
 
@@ -18,6 +18,7 @@
 		<java.version>1.8</java.version>
 		<aws.version>1.11.939</aws.version>
 		<mica.auto.version>2.1.1</mica.auto.version>
+		<swagger.version>1.5.22</swagger.version>
 		<spring.checkstyle.plugin>0.0.28</spring.checkstyle.plugin>
 	</properties>
 
@@ -35,11 +36,26 @@
 			<version>${aws.version}</version>
 		</dependency>
 
+		<!-- validation-api -->
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- swagger -->
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>${swagger.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!--lombok 插件-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- mica-auto -->
@@ -49,6 +65,7 @@
 			<version>${mica.auto.version}</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<!--测试依赖-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
