--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.2</version>
+		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pig4cloud.plugin</groupId>
@@ -17,8 +17,9 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<aws.version>1.11.939</aws.version>
-		<mica.auto.version>2.1.1</mica.auto.version>
+		<mica.auto.version>2.1.3</mica.auto.version>
 		<swagger.version>1.5.22</swagger.version>
+		<swagger.v3.version>2.1.10</swagger.v3.version>
 		<spring.checkstyle.plugin>0.0.28</spring.checkstyle.plugin>
 	</properties>
 
@@ -48,6 +49,12 @@
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-annotations</artifactId>
 			<version>${swagger.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>${swagger.v3.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
