--- a/src/test/resources/application-minio.yml
+++ b/src/test/resources/application-minio.yml
@@ -1,4 +1,4 @@
 oss:
-  endpoint: http://minio.pig4cloud.com
-  access-key: lengleng
-  secret-key: lengleng
+  endpoint: https://play.min.io:9000
+  access-key: Q3AM3UQ867SPQQA43P2F
+  secret-key: zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG
